# flutter_app_for_lldb

./: README.md  pubspec.yaml
android/: .gitignore  gradle.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: Android.mk  CMakeLists.txt  test.cpp
android/app/src/main/java/com/example/flutter_app/: FlutterEntryActivity.java  MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
lib/: aop.dart  aop_impl.dart
